bk_ida/gccida/g0/yyprint
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/yyprint/src/c-parse.c:5502:16: error: use of undeclared identifier 'off_76192C'
fprintf( file, off_76192C, mode_name[*( _BYTE *)( *( _QWORD *)( yyl.itype + 8) + 61LL) >> 1]); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/yyprint/src/obj/c-parse.o] Error 1
